--- a/mang.html
+++ b/mang.html
@@ -9,5 +9,27 @@
     <title>Trips-Traps-Trull</title>
 </head>
 <body>
+    <div id="mangijad">
+        Player 1 vs Player 2
+    </div>
+    <div id="punktid"></div>
+    <div id="alus" onmouseover="lopp()">
+        <div id="1" onclick="vajutus(this)" class="ruut parem-aar alumine-aar"></div>
+        <div id="2" onclick="vajutus(this)" class="ruut parem-aar alumine-aar"></div>
+        <div id="3" onclick="vajutus(this)" class="ruut alumine-aar"></div>
+        <div id="4" onclick="vajutus(this)" class="ruut parem-aar alumine-aar"></div>
+        <div id="5" onclick="vajutus(this)" class="ruut parem-aar alumine-aar"></div>
+        <div id="6" onclick="vajutus(this)" class="ruut alumine-aar"></div>
+        <div id="7" onclick="vajutus(this)" class="ruut parem-aar"></div>
+        <div id="8" onclick="vajutus(this)" class="ruut parem-aar"></div>
+        <div id="9" onclick="vajutus(this)" class="ruut"></div>
+    </div>
+    
+    <div id="uusmang">
+        <button id="kustuta" onclick="uusmang()">uusmang</button>
+    </div>
+
+    <div id="link" href="">Repo link</div>
+    <div id="nimed">Autorid:Kairi Käpa ja Reydan Niineorg</div>
 </body>
 </html>
